# protocolcraft-plugin

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: build.yml
cmake/: plugin.cmake  protocolcraft.cmake
generic/include/: PluginObjectImpl.hpp  protocolcraft_plugin.hpp
generic/src/: protocolcraft_plugin.cpp
plugins/: CMakeLists.txt
plugins/vanilla-plugin/: CMakeLists.txt  README.md
plugins/vanilla-plugin/include/: MinecraftBrand.hpp  MinecraftRegisterChannels.hpp
plugins/vanilla-plugin/src/: register.cpp
